# chessengine

./: Cargo.toml  config.schema.json  nb.ipynb
src/: board.rs  clap.rs  figure.rs  graph.rs  json.rs  main.rs
src/figures/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
