[package]
name = "chessengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
indicatif = "0.17.2"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
